# module.rt-wc-score

./: .gitignore  CHANGELOG.md  README.md  __init__.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: 1.bump-version.yml
docs/: README.md  structure.md
docs/diagrams/call-graphs/: cgraph_metrics_processor.gv
docs/diagrams/classes/: classes_metrics_processor.html
docs/modules/: README.md
docs/modules/heuristics/: README.md
docs/modules/preprocessing/: README.md
docs/pages/api-docs/: ModelConfigPM.md  SimpleModel.md  diagrams.md
docs/pages/dev/: file-structure.md
docs/pages/dev/scripts/: 3.get-version.md  5.bump-version.md
docs/pages/getting-started/: configuration.md  error-codes.md  examples.md  installation.md
examples/advanced/: main.py
examples/simple/: main.py
notebooks/: example.ipynb  simple.ipynb
requirements/: requirements.dev.txt
scripts/: bump-version.sh  diagrams.sh  get-version.sh
src/: __init__.py
src/metrics_processor/: __init__.py  _main.py  config.py
src/metrics_processor/modules/: __init__.py
src/metrics_processor/modules/feature_engineering/: __init__.py  _base.py
src/metrics_processor/modules/feature_engineering/feature_engineering/: __init__.py  feature_engineering.py  keyboard_events_fe.py  mouse_down_up_fe.py  mouse_movement_fe.py
src/metrics_processor/modules/feature_engineering/feature_engineering_batch/: __init__.py  feature_engineering_batch.py  keyboard_events_fe_batch.py  mouse_down_up_fe_batch.py  mouse_movement_fe_batch.py  mouse_movements_h_computation_batch.py
src/metrics_processor/modules/heuristics/: __init__.py  _base.py  _main.py  config.py
src/metrics_processor/modules/heuristics/heuristic_check_batch/: __init__.py  heuristics_check.py  mouse_movements_heuristics_check.py
src/metrics_processor/modules/heuristics/mouse_events/: _main.py  config.py
src/metrics_processor/modules/heuristics/mouse_events/checkbox_path/: _main.py
src/metrics_processor/modules/heuristics/mouse_events/movement_count/: __init__.py  _main.py  config.py
src/metrics_processor/modules/heuristics/mouse_events/velocity/: _main.py  config.py
src/metrics_processor/modules/heuristics/rules/: config.py
src/metrics_processor/modules/preprocessing/: __init__.py  _main.py  config.py  feature_preproccessor.py
src/metrics_processor/modules/preprocessing/feature_engineer/: __init__.py  _keyboard_events.py  _main.py  _mouse_down_up.py  _mouse_movement.py  config.py
src/metrics_processor/modules/preprocessing/feature_engineer/checkboxes/: _checkbox_events.py  config.py
src/metrics_processor/modules/preprocessing/feature_engineer/keyboard_events/: __init__.py  _keyboard_events.py  config.py
src/metrics_processor/modules/preprocessing/feature_engineer/mouse_events/: __init__.py  _mouse_down_up.py  _mouse_movement.py  config.py
src/metrics_processor/modules/preprocessing/json_flattener/: __init__.py  _main.py  config.py
src/rt_wc_score/: __init__.py  _main.py
src/rt_wc_score/modules/heuristics/: __init__.py  _base.py  _main.py  config.py
src/rt_wc_score/modules/heuristics/mouse_events/: __init__.py  _base.py  _main.py
src/rt_wc_score/modules/heuristics/mouse_events/checkbox_path/: _main.py  (+2 more)
src/rt_wc_score/modules/preprocessing/: __init__.py  _base.py  _main.py  config.py
src/rt_wc_score/modules/preprocessing/feature_engineer/: _base.py  _main.py  config.py
src/rt_wc_score/modules/preprocessing/json_flattener/: _main.py  config.py
templates/configs/: config.json  config.yml
tests/: test_generated.py  test_simple_model.py
(+12 files in other folders)
