[build-system]
requires = ["setuptools>=70.3.0,<80.0.0", "setuptools-scm>=8.0.4,<9.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metrics_processor"
authors = [{ name = "Batkhuu Byambajav", email = "batkhuu10@gmail.com" }]
description = "'metrics_processor' is a template module for python AI/ML model."
readme = "README.md"
requires-python = ">=3.9,<4.0"
keywords = [
	"metrics_processor",
	"model",
	"module",
	"ai/ml/dl",
	"artificial-intelligence",
	"machine-learning",
	"deep-learning",
]
license = { file = "LICENSE.txt" }
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Topic :: Software Development :: Libraries",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["metrics_processor*"]
# namespaces = false

[tool.setuptools.dynamic]
version = { attr = "metrics_processor.__version__.__version__" }
dependencies = { file = "./requirements.txt" }
# optional-dependencies.gpu = { file = ["./requirements/requirements.gpu.txt"] }

[project.urls]
Homepage = "https://github.com/bybatkhuu/model.python-template"
Documentation = "https://bybatkhuu.github.io/model.python-template"
Repository = "https://github.com/bybatkhuu/model.python-template.git"
Issues = "https://github.com/bybatkhuu/model.python-template/issues"
Changelog = "https://github.com/bybatkhuu/model.python-template/CHANGELOG.md"
