[build-system]
requires = ["setuptools>=70.3.0,<80.0.0", "setuptools-scm>=8.0.4,<9.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rt_wc_score"
authors = [
	{ name = "Batkhuu Byambajav", email = "batkhuu10@gmail.com" },
	{ name = "Asadbek Kiyomov", email = "asadbey0331@gmail.com" },
]
description = "'rt_wc_score' is a python module that score web challenge."
readme = "README.md"
requires-python = ">=3.9,<4.0"
keywords = ["rt_wc_score", "model", "module"]
license = { file = "LICENSE.txt" }
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Topic :: Software Development :: Libraries",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

# [tool.setuptools.packages.find]
# where = ["src"]
# include = ["rt_wc_score*"]
# namespaces = false

[tool.setuptools.dynamic]
version = { attr = "rt_wc_score.__version__.__version__" }
dependencies = { file = "./requirements.txt" }

[project.urls]
Homepage = "https://github.com/RedTeamSubnet/module.rt-wc-score"
Documentation = "https://github.com/RedTeamSubnet/module.rt-wc-score/tree/main/docs"
Repository = "https://github.com/RedTeamSubnet/module.rt-wc-score"
Issues = "https://github.com/RedTeamSubnet/module.rt-wc-score/issues"
Changelog = "https://github.com/RedTeamSubnet/module.rt-wc-score/CHANGELOG.md"
